--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
     </header>
     <main>
       <!-- Hero -->
-      <div>
-        <section>
-          <h1>Эффективные решения для вашего бизнеса</h1>
-          <button type="button">Заказать услугу</button>
-        </section>
-      </div>
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
       <!-- Особенности -->
       <section>
         <!-- прихований заголовок
@@ -66,22 +64,22 @@
         <ul>
           <li>
             <img src="./images/team1.jpg" alt="Игорь Демьяненко" width="270" />
-            <h4>Игорь Демьяненко</h4>
+            <h3>Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/team2.jpg" alt="Ольга Репина" width="270" />
-            <h4>Ольга Репина</h4>
+            <h3>Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/team3.jpg" alt="Николай Тарасов" width="270" />
-            <h4>Николай Тарасов</h4>
+            <h3>Николай Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/team4.jpg" alt="Михаил Ермаков" width="270" />
-            <h4>Михаил Ермаков</h4>
+            <h3>Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
           </li>
         </ul>
@@ -89,16 +87,18 @@
     </main>
     <!-- Footer -->
     <footer>
-      <ul>
-        <li><a href="./index.html">WebStudio</a></li>
-        <li>
-          <address>
-            <a href="https://goo.gl/maps/tA7HPzwpF9PkPvpf6" target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
-          </address>
-        </li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
+      <a href="./index.html">WebStudio</a>
+      <address>
+        <ul>
+          <li>
+            <a href="https://goo.gl/maps/tA7HPzwpF9PkPvpf6" target="_blank" rel="noopener noreferrer"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
